--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -23,13 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-cupertino_icons: ^1.0.0
-intl: ^0.16.1
-
+  cupertino_icons: ^1.0.0
+  intl: ^0.16.1
+  firebase_auth:
+  firebase_database:
+  firebase_core: ^0.5.0
+  animations: ^1.1.2
+  animated_splash_screen: ^1.0.1+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl: ^0.16.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
