update screen login & signup

--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  flutter_svg: ^0.19.1
   intl: ^0.16.1
   firebase_auth:
   firebase_database:
