--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   firebase_core: ^0.5.0
   animations: ^1.1.2
   animated_splash_screen: ^1.0.1+2
+  flutter_launcher_icons: ^0.8.1
+  image_path: "assets/icon/icon.png"
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
