--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   animations: ^1.1.2
   animated_splash_screen: ^1.0.1+2
   flutter_launcher_icons: ^0.8.1
-  image_path: "assets/icon/icon.png"
+  # image_path: "assets/icon/icon.png"
 dev_dependencies:
   flutter_test:
     sdk: flutter
