--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -1,3 +1,5 @@
+# @format
+
 name: note_app
 description: A new Flutter project.
 
@@ -24,6 +26,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  http:
+  fluttertoast: ^4.0.1
   flutter_svg: ^0.19.1
   intl: ^0.16.1
   firebase_auth:
