--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.12.2
   webview_flutter: ^1.0.7
   animated_splash_screen: ^1.0.1+2
+  shared_preferences: ^0.5.12+4
   flutter_launcher_icons: ^0.8.1
   # image_path: "assets/icon/icon.png"
 
