--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_splash_screen: ^1.0.1+2
   shared_preferences: ^0.5.12+4
   flutter_launcher_icons: ^0.8.1
+  easy_localization: ^2.3.3
   flutter_speed_dial:
   # image_path: "assets/icon/icon.png"
 
@@ -63,6 +64,8 @@ flutter:
     #   - images/a_dot_ham.jpeg
     - assets/images/
     - assets/icons/
+    - lang/en-US.json
+    - lang/vn-VN.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
