--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^0.5.0
   animations: ^1.1.2
   http: ^0.12.2
+  get_it: ^5.0.3
   webview_flutter: ^1.0.7
   animated_splash_screen: ^1.0.1+2
   shared_preferences: ^0.5.12+4
