--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth:
   firebase_database:
   firebase_core: ^0.5.0
+  firebase_messaging: ^7.0.3
   animations: ^1.1.2
   http: ^0.12.2
   get_it: ^5.0.3
